GNOME Bugzilla – Bug 662607
printf format mismatch causes compiler warnings
Last modified: 2012-01-15 18:27:14 UTC
Created attachment 199815 [details] [review] fixes build warnings/errors 64bit build; patch attached
Created attachment 199833 [details] [review] patch for gst-plugins-good
Created attachment 201844 [details] [review] Fix build for OS X
Pushed, thanks for the patch: commit e8fb8cb52351b0acea2c022a9397da9748daa336 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Tue Nov 22 01:21:04 2011 +0000 Fix some more printf format warnings commit 817f39608cb9077b034e57ab222a69571a54fb19 Author: Matej Knopp <matej.knopp@gmail.com> Date: Mon Nov 21 19:28:01 2011 +0100 Fix printf format compiler warnings for OSX / 64bit https://bugzilla.gnome.org/show_bug.cgi?id=662607
Created attachment 202249 [details] [review] patch
Created attachment 204242 [details] [review] Another one