Fix printf format compiler warnings for OSX / 64bit

https://bugzilla.gnome.org/show_bug.cgi?id=662607